--- a/src/lang/lithuanian.txt
+++ b/src/lang/lithuanian.txt
@@ -4755,6 +4755,11 @@ STR_BASESOUNDS_NONE_DESCRIPTION                                 :Garsų pakas be
 STR_BASEMUSIC_WIN_DESCRIPTION                                   :Originali Transport Tycoon Deluxe Windows leidimo muzika.
 STR_BASEMUSIC_NONE_DESCRIPTION                                  :Muzikos pakas be muzikos.
 
+STR_TRADITIONAL_TRAIN_NAME                                      :Traukinys {COMMA}
+STR_TRADITIONAL_ROAD_VEHICLE_NAME                               :Automobilis {COMMA}
+STR_TRADITIONAL_SHIP_NAME                                       :Laivas {COMMA}
+STR_TRADITIONAL_AIRCRAFT_NAME                                   :Lėktuvas {COMMA}
+
 ##id 0x2000
 # Town building names
 STR_TOWN_BUILDING_NAME_TALL_OFFICE_BLOCK_1                      :Administracinis kompleksas
