--- a/src/lang/swedish.txt
+++ b/src/lang/swedish.txt
@@ -4642,6 +4642,11 @@ STR_BASEMUSIC_DOS_DESCRIPTION                                   :Originalmusiken
 STR_BASEMUSIC_TTO_DESCRIPTION                                   :Originalmusiken från DOS-utgåvan av Transport Tycoon (Original/World Editor).
 STR_BASEMUSIC_NONE_DESCRIPTION                                  :Ett musikpaket utan någon musik.
 
+STR_TRADITIONAL_TRAIN_NAME                                      :Tåg {COMMA}
+STR_TRADITIONAL_ROAD_VEHICLE_NAME                               :Vägfordon {COMMA}
+STR_TRADITIONAL_SHIP_NAME                                       :Skepp {COMMA}
+STR_TRADITIONAL_AIRCRAFT_NAME                                   :Luftfarkost {COMMA}
+
 ##id 0x2000
 # Town building names
 STR_TOWN_BUILDING_NAME_TALL_OFFICE_BLOCK_1                      :Högt kontor
