--- a/src/lang/catalan.txt
+++ b/src/lang/catalan.txt
@@ -4643,6 +4643,11 @@ STR_BASEMUSIC_DOS_DESCRIPTION                                   :Música origina
 STR_BASEMUSIC_TTO_DESCRIPTION                                   :Música original del Transport Tycoon Deluxe (original/editor d'escenaris) pel DOS.
 STR_BASEMUSIC_NONE_DESCRIPTION                                  :Una llista de música sense cap peça.
 
+STR_TRADITIONAL_TRAIN_NAME                                      :{G=Masculin}Tren {COMMA}
+STR_TRADITIONAL_ROAD_VEHICLE_NAME                               :{G=Masculin}Automòbil {COMMA}
+STR_TRADITIONAL_SHIP_NAME                                       :{G=Masculin}Vaixell {COMMA}
+STR_TRADITIONAL_AIRCRAFT_NAME                                   :{G=Masculin}Avió {COMMA}
+
 ##id 0x2000
 # Town building names
 STR_TOWN_BUILDING_NAME_TALL_OFFICE_BLOCK_1                      :Bloc d'oficines alt
